addons/application/func121/tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hkkanjian
  name: hkkanjian
  namespace: star
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hkkanjian
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hkkanjian
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/kanjian/hkkanjian:202109081806
        imagePullPolicy: IfNotPresent
        name: hkkanjian
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 3Gi
          requests:
            cpu: 800m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
          readOnly: true
        - mountPath: /var/www/html
          name: hk-site-file
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: hz-registry
      nodeSelector:
        wordpress: chinaimx
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: wordpress
        operator: Equal
        value: chinaimx
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
          type: ""
        name: tz-config
      - name: hk-site-file
        nfs:
          path: /hkkanjian
          server: 12f6414b676-jwi12.cn-hongkong.nas.aliyuncs.com
